# cc-agent

./: .env_example  README.md  pyproject.toml
tools/: diagram_generator.py
